# oop2_lab_1

./: .gitignore  CMakeLists.txt  Makefile  README.md  TASK.md  qt_lab1.pro
.opencode/agent/: coder.md  qa.md  verificator.md  writer.md
docs/: index.typ
src/: calculatorform.cpp  calculatorform.hpp  calculatorform.ui  greetingform.cpp  greetingform.hpp  greetingform.ui  main.cpp
tests/: test_plan.md  test_scenarios.md
